# nix-package-template_cpp

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp
docs/: README.md
